allows running with java 8, 11 not required